Server+Web: Add posts like and dislike buttons
